test/spec_vectors/type-subtyping/fail/module_71.wat
(module (type $a (sub (struct (field (ref none))))) (type $b (sub $a (struct (field (ref any))))))